# python-mongodb-submitter

./: pyproject.toml
notebooks/: upload.ipynb
notebooks/archive/: Upload_Submission.ipynb
