[tool.poetry]
name = "python-tool"
version = "0.1.0"
description = ""
authors = ["Will Holdsworth <83637728+wi11-holdsworth@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.0.0"
notebook = "^7.2.1"
ipykernel = "^6.29.5"
pymongo = "^4.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
